k8s/whoami/01-whoami-services.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  selector:
    app: whoami
  ports:
    - name: web
      port: 80
      targetPort: web
